# pavex-chone

./: .envrc  README.md
app/: Cargo.toml
app/src/: blueprint.rs  configuration.rs  credentials.rs  ctx.rs  lib.rs  login_payload.rs  model.rs  tickets.rs  user_agent.rs
app/src/routes/: greet.rs  login.rs  mod.rs  tickets.rs
app/src/routes/web/: mod.rs  mw_auth.rs  tickets.rs
server/: Cargo.toml
server/configuration/: base.yml
server/tests/integration/: greet.rs  helpers.rs  login.rs  main.rs  tickets.rs
server_sdk/: Cargo.toml
server_sdk/src/: lib.rs
workspace_hack/: Cargo.toml
